# RapaPhidget

./: CMakeLists.txt  README.md
cmake/: FindPhidget21.cmake
docs/: RapaPhidgetUML.uml
include/: RPhiDevice.h  RPhiDeviceManager.h  RPhiLocalDeviceManager.h  RPhiRemoteDeviceManager.h  RPhiSpatial.h  RPhiTemperatureSensor.h  RPhiVector3.h
samples/: CMakeLists.txt
samples/RapaPhidgetSimpleTest/: CMakeLists.txt  Main.cpp
src/: RPhiDevice.cpp  RPhiDeviceManager.cpp  RPhiLocalDeviceManager.cpp  RPhiRemoteDeviceManager.cpp  RPhiSpatial.cpp  RPhiTemperatureSensor.cpp
